Browsing details page integrated

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -71,9 +71,9 @@
       <script type="text/javascript">
 
     jQuery(function($){
-      $("#booking_dropoff_date").datepicker({dateFormat: 'mm dd', showOn: 'button', buttonImage: '/assets/calendar.png', buttonImageOnly: true})
+      $("#booking_dropoff_date").datepicker({dateFormat: 'd M', showOn: 'button', buttonImage: '/assets/calendar.png', buttonImageOnly: true})
 
-      $("#booking_pickup_date").datepicker({dateFormat: 'yy-mm-dd', showOn: 'button', buttonImage: '/assets/calendar.png', buttonImageOnly: true})
+      $("#booking_pickup_date").datepicker({dateFormat: 'd M', showOn: 'button', buttonImage: '/assets/calendar.png', buttonImageOnly: true})
 
     });
 
