Browsing details page integrated

--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -71,6 +71,7 @@
       <script type="text/javascript">
 
     jQuery(function($){
+      
       $("#booking_dropoff_date").datepicker({dateFormat: 'd M', showOn: 'button', buttonImage: '/assets/calendar.png', buttonImageOnly: true})
 
       $("#booking_pickup_date").datepicker({dateFormat: 'd M', showOn: 'button', buttonImage: '/assets/calendar.png', buttonImageOnly: true})
@@ -232,10 +233,10 @@ jQuery(document).ready(function(){
                <div class="s2">
            
            <div class="kal">  
-            <% if @post.photo.url() == "/photos/original/missing.png" %>
+            <% if @post.photo.url(:medium) == "/photos/medium/missing.png" %>
               <%= image_tag "default_post_large.png", :style => "width:510px" %>
             <% else %>
-              <%= image_tag(@post.photo.url(), :style => "width:510px") %>
+              <%= image_tag(@post.photo.url(:medium), :style => "width:510px") %>
             <% end %>
 
            </div>
