--- a/app/assets/stylesheets/jquery.ui.theme.css
+++ b/app/assets/stylesheets/jquery.ui.theme.css
@@ -18,9 +18,13 @@
 /* Component containers
 ----------------------------------*/
 
+ @font-face {
+	font-family: 'brandon4';
+	src:url('/assets/Brandon_reg.otf');}
+
 .ui-widget {
-	font-family: Verdana,Arial,sans-serif/*{ffDefault}*/;
-	font-size: 1.1em/*{fsDefault}*/;
+	font-family: brandon4;
+	font-size: 12px;
 }
 .ui-widget .ui-widget {
 	font-size: 1em;
@@ -29,8 +33,8 @@
 .ui-widget select,
 .ui-widget textarea,
 .ui-widget button {
-	font-family: Verdana,Arial,sans-serif/*{ffDefault}*/;
-	font-size: 1em;
+	font-family: brandon4;
+	font-size: 12px;
 }
 .ui-widget-content {
 	border: 1px solid #aaaaaa/*{borderColorContent}*/;
@@ -43,7 +47,7 @@
 .ui-widget-header {
 	border: none !important;
 	background: none !important;
-	color: #878b94/*{fcHeader}*/;
+	color: #9198a0/*{fcHeader}*/;
 	font-weight: bold;
 }
 .ui-widget-header a {
