Admin Layout updated

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -47,11 +47,13 @@
                 <ul>
                 <li><a href="javascript:void(0);">About us</a></li>
                 <li><a href="javascript:void(0);">FAQ</a></li>
-                <li><a href="javascript:void(0);">Contact us</a></li></ul><br>
+                 
+                <li><%= link_to 'Contact us', home_contactus_path %> </li></ul><br>
             </div>
                
               <div class="left" style="width:200px;float:left;">
                 <ul>  <li><a href="javascript:void(0);">Refund policy</a></li>
+
                   <li><a href="javascript:void(0);">Privacy & Terms</a></li>
                   <li><a href="javascript:void(0);">Support</a></li>
                 </ul>
