--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -45,7 +45,7 @@
             <p style= "float:right;margin:30px 60px 0px -150px;"><a href="javascript:void(0);"><img src="/assets/facebook_icon.png"></a> </p>
             <div class="right" style="width:191px;float:left;"> <!--------9/12/14---------------->
                 <ul>
-                <li><a href="javascript:void(0);">About us</a></li>
+                <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"}%></li>
                 <li><a href="javascript:void(0);">FAQ</a></li>
                 <li><a href="javascript:void(0);">Contact us</a></li></ul><br>
             </div>
