--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -427,9 +427,10 @@ jQuery(document).ready(function(){
                   <img class="top" src="/assets/que.png" />
                     </div>
                       
+                      <span class="classic10">  This is just an example of what  </span> </a></div>
                       
                   <% if @post.pick_up == true %> 
-                      <span class="classic10">  This isjust an example of what  </span> </a></div>
+                      
                  
                      <div class="pickup3">
                       <input type="checkbox" id="checkbox2" />
@@ -441,6 +442,7 @@ jQuery(document).ready(function(){
                   <% else %>
                     <div class="styleSelect3">
                       <p> Unavailable</p>
+                      <p class="miles3" style="padding-left: 60px;"></p>
                     </div>
 
                     <p class="sed" style="float:right; margin:-32px -2px 0 30px; font-size:14px;" id="check_pickup">-</p>
