--- a/app/views/about_us/about.html.erb
+++ b/app/views/about_us/about.html.erb
@@ -8,16 +8,26 @@
  -->
 
 
+
+
+
+
 <div style="background-color:#072643;" class="main2">
 
     <div class="main2" style="background-color:#072643;">
     <div class="dinobo1"> 
-    <% @about_us.each do |about_u| %>  
+    <% @about_us.each_with_index do |about_u, index| %> 
+    <% if index == 1 %> 
         <div class="dinobo-img"> 
-            <%= image_tag about_u.photo.url, :style=>"margin-left:9px;" rescue nil %>
-            <p style="color:#FFF"><%= about_u.name rescue nil%></p> 
+            <%= image_tag about_u.photo.url, :style=>"margin-left:0px;" rescue nil %>
+            <p style="color:#FFF; margin-left:-11px;"><%= about_u.name rescue nil%></p> 
         </div>
-              
+        <% else %>
+             <div class="dinobo-img"> 
+            <%= image_tag about_u.photo.url, :style=>"margin-left:6px;" rescue nil %>
+            <p style="color:#FFF; margin-left:0px;"><%= about_u.name rescue nil%></p> 
+        </div>
+        <% end %> 
         <div class="dinobo-para">                    
             <p class="sed1"><%= about_u.content rescue nil %><br/><br/><br/><br/><br/><br/></p>
         </div> 
