added faq search logic and design integration

--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -10,6 +10,7 @@
     <li><%= link_to 'Manage About Us', about_us_path %></li>
     <li><%= link_to "Manage All Posts", home_all_postings_path %></li>
     <li><%=  link_to "College ID",access_ids_path%></li>
+    <li><%=  link_to "FAQs",faqs_path%></li>
 
      <!-- <li><%#= link_to "Payement Transfer", payement_transfers_path %></li> -->
     <li> <%= link_to 'Logout', destroy_user_session_path, :method=>'delete' %> </li>
