--- a/app/views/faqs/show.html.erb
+++ b/app/views/faqs/show.html.erb
@@ -1,14 +1,19 @@
 <p id="notice"><%= notice %></p>
 
 <p>
-  <strong>Question:</strong>
-  <%= @faq.question %>
+  <strong>Title:</strong>
+  <%= @faq.title %>
 </p>
-
-<p>
-  <strong>Answer:</strong>
-  <%= @faq.answer %>
-</p>
+<% @faq.faq_questions.each do |faq|%>
+	<p>
+	  <strong>Question:</strong>
+	  <%= faq.question %>
+	</p>
+	<p>
+	  <strong>Answer:</strong>
+	  <%= faq.answer %>
+	</p> <br/>
+<%end%>
 
 <%= link_to 'Edit', edit_faq_path(@faq) %> |
 <%= link_to 'Back', faqs_path %>
