added link in index page for faq

--- a/app/views/layouts/home.html.erb
+++ b/app/views/layouts/home.html.erb
@@ -46,7 +46,7 @@
             <div class="right" style="width:191px;float:left;"> <!--------9/12/14---------------->
                 <ul>
                 <li><%= link_to 'About Us',{:controller=>"/about_us", :action=>"about"}%></li>
-                <li><a href="javascript:void(0);">FAQ</a></li>
+                <li><%= link_to "FAQ",faq_path%></li>
                  
                 <li><%= link_to 'Contact us', home_contactus_path %> </li></ul><br>
             </div>
