contact_us pages changes

--- a/app/views/about_us/about.html.erb
+++ b/app/views/about_us/about.html.erb
@@ -29,7 +29,7 @@
         </div>
         <% end %> 
         <div class="dinobo-para">                    
-            <p class="sed1"><%= about_u.content rescue nil %><br/><br/><br/><br/><br/><br/></p>
+            <p class="sed1">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;<%= about_u.content rescue nil %><br/><br/><br/><br/><br/><br/></p>
         </div> 
     <% end %>
     </div>  
