--- a/app/views/home/contactus.html.erb
+++ b/app/views/home/contactus.html.erb
@@ -1,13 +1,55 @@
- <%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
-<%= form_for :contactus, :url=>{:controller=>'contactus',:action=>'create'},:html => {:id => "contactus"} do |f| %>
-<div>
-  <div class="field">
-   <%= f.collection_select :subject, Contactus.where("message IS NULL"), :subject, :subject, {prompt: "Subject"}, :class=>"alignleft" %></br> </br>
-   </div>
+ 
+<%= javascript_include_tag "jquery-1.4.2.min","jquery.validate.min","validation" %>
+ 
+<!-- 	<%= form_for :contactus, :url=>{:controller=>'contactus',:action=>'create'},:html => {:id => "contactus"} do |f| %>
+	<div>
+	  <div class="field">
+	   <%= f.collection_select :subject, Contactus.where("message IS NULL"), :subject, :subject, {prompt: "Subject"}, :class=>"alignleft" %></br> </br>
+	   </div>
 
-<div>
-<%= f.label :Message %><br />	
-<%= f.text_area :message,:cols => "30", :rows => "5"%>
-</div></br>
-<%= f.submit "submit", :class => "btn btn-primary contact-form"%>
-<% end %>
+	<div>
+	<%= f.label :Message %><br />	
+	<%= f.text_area :message,:cols => "30", :rows => "5"%>
+	</div></br>
+	<%= f.submit "submit", :class => "btn btn-primary contact-form"%>
+	<% end %> 
+  -->
+
+
+     
+
+ 
+
+
+
+
+<div class="wrapper">
+<div class="main">   
+<div class="main4">
+<div class="main-new">
+            <ul class="verticle-menu" style="min-height:500px;" >
+      
+            <li class="active"><%= link_to 'Contact-Us', home_contactus_path %></li>
+            <li><a href="#">FAQs</a></li>
+            
+            </ul>
+                   
+
+              <%= form_for :contactus, :url=>{:controller=>'contactus',:action=>'create'},:html => {:id => "contactus"} do |f| %>
+               <div class="topics">
+                    <div style="overflow: hidden; border: 1px solid rgb(238, 238, 238); margin-left: 188px; width: 289px;" > <%= f.collection_select :subject, Contactus.where("message IS NULL"), :subject, :subject, {prompt: "Topic"}%></div><br/><br/>
+              </div> 
+                
+              
+
+                <div class="massage"><%= f.text_area :message,:cols => "40", :rows => "40",placeholder: "Message", :style=>"width:270px; height:80px;", :id=>"topic1" %></div>
+                <%= f.submit "submit", :class => "submit button", :type => "button"%><br>        
+                <% end %>
+               
+                
+         
+            <div class="help">&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;  help@dinobo.com </div>
+             </div>              
+</div>
+</div>
+</div>
