--- a/app/views/bookings/index.html.erb
+++ b/app/views/bookings/index.html.erb
@@ -1,4 +1,6 @@
-  <script type="text/javascript">
+<%= stylesheet_link_tag   "bootstrap.min.css"%>
+<%= javascript_include_tag "ddaccordion.js", "jquery.min.js" %>
+<script type="text/javascript">
 
     jQuery(function($){
       $("#start_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false,showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
@@ -7,57 +9,7 @@
     jQuery(function($){
       $("#end_date").datepicker({dateFormat: 'yy-mm-dd',changeMonth: false,changeYear: false, showOn: 'button', buttonImage: 'http://jqueryui.com/resources/demos/datepicker/images/calendar.gif', buttonImageOnly: true})
     });
-
-
-  </script>
- <%= form_tag search_by_date_path,:method => 'get' do %>
-From Date :
-<%= text_field_tag :start_date, params[:start_date]%></br>
-
-To Date :
-<%= text_field_tag :end_date, params[:end_date],onchange:"checkAndSubmit()" %></br>
-     
-<%end%> 
-<table class="table table-striped">
-<tr>
-<th>Sr No.</th>
-<th>Booking Date</th>
-<th>Booking Area/Sq.Ft</th>
-<th>Lister's Name</th>
-<th>Address</th>
-<th>Pickup?</th>
-<th>Dropoff?</th>
-<th>Pick up Date</th>
-<th>Drop off Date</th>
-<th>Order</th>
-<th>Cancel Booking</th>
-</tr>
-<% @bookings.each_with_index do |booking, index|%>
-<tr>
-
-<td><%= index + 1 %></td>
-<td><%= booking.created_at.to_date %></td>
-<td><%= Post.find(booking.post_id).area %></td>
-<td><%= User.find(booking.user_id).name %></td>
-<td><%= Post.find(booking.post_id).address %></td>
-	<%if Post.find(booking.post_id).pick_up == true%>
-	<td><%= check_box_tag(Post.find(booking.post_id).pick_up, value = "1", checked = true, disabled: true)%></td>
-	<td><%= check_box_tag(Post.find(booking.post_id).drop_off, value = "1", checked = false, disabled: true)%></td>
-	<%else%>
-	<td><%= check_box_tag(Post.find(booking.post_id).pick_up, value = "1", checked = false, disabled: true)%></td>
-	<td><%= check_box_tag(Post.find(booking.post_id).drop_off, value = "1", checked = true, disabled: true)%></td>
-	<%end%>
- <td><%= Post.find(booking.post_id).pick_up_avaibilty_start_date.strftime("%d-%m-%Y") %> - <%= Post.find(booking.post_id).pick_up_avaibility_end_date.strftime("%d-%m-%Y")%>
-	</td>
- <td><%= Post.find(booking.post_id).drop_off_avaibility_start_date.strftime("%d-%m-%Y")%> - <%= Post.find(booking.post_id).drop_off_avaibility_end_date.strftime("%d-%m-%Y")%></td>
-	
-<td><%= link_to "View Details",{:controller => 'bookings', :action => 'show', :id => booking.id} %></td>
-<td><%= link_to "Cancel Booking",cancel_booking_bookings_path(:drop_off_date =>booking.dropoff_date,:id =>booking.id) %></td>
-<td><%#= link_to "Delete", [:delete, adminuser], method: :delete, data: { confirm: 'Are you sure?' } %></td>
-<td><%#= link_to format_boolean(adminuser.status?), {:controller => 'users', :action => 'toggled_status', :id => adminuser.id} %></td>
-</tr>
-<%end%> 
-</table>
+</script>
 
  
 <script>
@@ -72,4 +24,256 @@ To Date :
       window.location.href = '/search_by_date?start_date=' + start_date +"&end_date="+end_date;
      } 
 }
-</script>  
+</script>
+
+
+<div class="main-new">
+            <ul class="verticle-menu">
+            <li><a href="#">Personal Information</a></li>
+            <li><a href="#">Change Password</a></li>
+            <li><a href="#">Bank Details</a></li>
+            <li><a href="#">My Post</a></li>
+            <li><a href="#">My Order/Received</a></li>
+            <li class="active"><a href="#">My Booking</a></li>
+            <li><a href="#">Payment</a></li>
+            <li><a href="#">Message</a></li>
+            </ul>
+          
+
+            <div class="right-side">
+              <div class="blue-header">
+                    <%= form_tag search_by_date_path,:method => 'get' do %>
+                    <ul class="date">
+                    <li>
+                    From <span><%= text_field_tag :start_date, params[:start_date]%><a href="#"><img src="image/cal_icon2.png" alt=""></a></span>
+                    </li>
+                    
+                    <li>
+                    To <span><%= text_field_tag :end_date, params[:end_date],onchange:"checkAndSubmit()" %><a href="#"><img src="image/cal_icon2.png" alt=""></a></span>
+                    </li>
+                    
+                    </ul>
+                    <div class="search">
+                    <a href=""><img src="image/search_new.png"></a>
+                    </div>
+                    <%end%> 
+              </div>
+                
+                <div class="booking-wrap">
+                <div class="bmar10 font10"><a href="">Show all</a> / Hide cancelled and past bookings</div>
+
+                    <div class="booking-box">
+                        <div class="booking-col">
+                            <span class="booking-name">Laurent H.</span>(5 mutual friends)
+                            <p>
+                            111, 1st Street</br>
+                            Los Angeles, CA 10021
+                            </p>
+                        </div>
+                        
+                       
+                        <div class="booking-col1">
+                        <span>Booking area</span> : 80 sq. ft
+                        <p>
+            <span>Status</span> : Normal
+                        </p>
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Drop-off date</span> : September 7, 2014
+                        <p>
+            <span>Booked drop-off</span> 
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        <p>
+                        <a href="#" class="booking-btn">Confirm drop-off</a>
+                        </p>
+
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Pick-up date</span>  : October 18, 2014
+                        <p>
+            <span>Booked pick-up</span>
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        </div>
+                        
+                  <div class="note"><span>Notes</span> : Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        </div>
+                        </div>
+                        
+                        <div class="booking-box">
+                        <div class="booking-col1">
+                            <span class="booking-name">Laurent H.</span>(5 mutual friends)
+                            <p>
+                            111, 1st Street</br>
+                            Los Angeles, CA 10021
+                            </p>
+                        </div>
+                        
+                       
+                        <div class="booking-col1">
+                        <span>Booking area</span> : 80 sq. ft
+                        <p>
+            <span>Status</span> : Normal
+                        </p>
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Drop-off date</span> : September 7, 2014
+                        <p>
+            <span>Booked drop-off</span> 
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        <p>
+                        <a href="#" class="booking-btn">Confirm drop-off</a>
+                        </p>
+
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Pick-up date</span>  : October 18, 2014
+                        <p>
+            <span>Booked pick-up</span>
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        </div>
+                        
+                  <div class="note"><span>Notes</span> : Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        </div>
+                        </div>
+                        
+                        
+                        <div class="booking-box">
+                        <div class="booking-col">
+                            <span class="booking-name">Laurent H.</span>(5 mutual friends)
+                            <p>
+                            111, 1st Street</br>
+                            Los Angeles, CA 10021
+                            </p>
+                        </div>
+                        
+                       
+                        <div class="booking-col1">
+                        <span>Booking area</span> : 80 sq. ft
+                        <p>
+            <span>Status</span> : Normal
+                        </p>
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Drop-off date</span> : September 7, 2014
+                        <p>
+            <span>Booked drop-off</span> 
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        <p>
+                        <a href="#" class="booking-btn">Confirm drop-off</a>
+                        </p>
+
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Pick-up date</span>  : October 18, 2014
+                        <p>
+            <span>Booked pick-up</span>
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        </div>
+                        
+                  <div class="note"><span>Notes</span> : Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        </div>
+                        </div>
+                        
+                        <div class="booking-box">
+                        <div class="booking-col">
+                            <span class="booking-name">Laurent H.</span>(5 mutual friends)
+                            <p>
+                            111, 1st Street</br>
+                            Los Angeles, CA 10021
+                            </p>
+                        </div>
+                        
+                       
+                        <div class="booking-col1">
+                        <span>Booking area</span> : 80 sq. ft
+                        <p>
+            <span>Status</span> : Normal
+                        </p>
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Drop-off date</span> : September 7, 2014
+                        <p>
+            <span>Booked drop-off</span> 
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        <p>
+                        <a href="#" class="booking-btn">Confirm drop-off</a>
+                        </p>
+
+                        </div>
+                        
+                        <div class="booking-col1">
+                        <span>Pick-up date</span>  : October 18, 2014
+                        <p>
+            <span>Booked pick-up</span>
+                        <label class="tasks-list-item">
+                        <input type="checkbox" class="tasks-list-cb" value="1" name="task_3">
+                        <span class="tasks-list-mark"></span>
+                        <!--<span class="tasks-list-desc">Left Label</span>-->
+                        </label>
+                        </p>
+                        </div>
+                        
+                  <div class="note"><span>Notes</span> : Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus.
+                        </div>
+                        </div>
+                  
+                    
+                    
+                </div>
+            </div>
+        </div>
+ 
+  </div><!-------------------main--------------------------->
+</div><!-------------------wrapper--------------------------->
+            
+             
+ 
+        
+
+
+
+
+</body>
+</html>
